[package]
name = "tic-tac-near"
version = "1.0.0"
authors = ["Pavel Iakushin <piakushin@roke.to>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "*"
near-contract-standards = "*"
uint = { version = "*", default-features = false }
serde = "*"

[dev-dependencies]
tokio = { version = "*", features = ["macros", "rt"] }
anyhow = "*"
workspaces = "*"


[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = []
